cfx-frontend/src/theme/base.scss
/* ... */
.mat-sort-header-content {

  .notification-table--header--cell,
  .table--header--cell {

    .table--header--cell--content .table--header--cell--content--sort .sort-icon,
    .notification-table--header--cell--content .notification-table--header--cell--content--sort .sort-icon,
    .filter-inactive {
      opacity: 0;
      transition: opacity .25s ease-in-out;
      -moz-transition: opacity .25s ease-in-out;
      -webkit-transition: opacity .25s ease-in-out;
    }
  }

  &:hover {

    .notification-table--header--cell,
    .table--header--cell {

      .filter-inactive,
      .table--header--cell--content .table--header--cell--content--sort .sort-icon,
      .notification-table--header--cell--content .notification-table--header--cell--content--sort .sort-icon {
        opacity: 1.0;
        transition: opacity .25s ease-in-out;
        -moz-transition: opacity .25s ease-in-out;
        -webkit-transition: opacity .25s ease-in-out;
      }
    }
  }

  .notification-table--header--cell,
  .table--header--cell,
  .filter-active {
    opacity: 1;
  }
}

